metadatafullcopy/unpackaged/objects/Job_Contact__c.object
<CustomObject>
    <fields>
        <fullName>ATI_Job__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ATI Job</label>
        <referenceTo>ATI_Job__c</referenceTo>
        <relationshipLabel>Job Contacts</relationshipLabel>
        <relationshipName>Job_Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_Address__c</fullName>
        <formula>Job_Acct__r.BillingStreet &amp; &quot;, &quot; &amp; Job_Acct__r.BillingCity &amp; &quot;, &quot; &amp; Job_Acct__r.BillingState &amp; &quot; &quot; &amp; Job_Acct__r.BillingPostalCode</formula>
        <label>Account Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Name__c</fullName>
        <formula>Contact__r.Account.Name</formula>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.Job_Acct__c</field>
                <operation>equals</operation>
                <valueField>Contact.Account.Id</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Job Contact Roles</relationshipLabel>
        <relationshipName>JOB_Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <formula>Contact__r.Email</formula>
        <label>Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_Acct__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Select an account if you are selecting a Home Owner or the Company - for example: Allstate Insurance.</inlineHelpText>
        <label>Job Acct</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Job Contact Roles</relationshipLabel>
        <relationshipName>Job_Accts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Job_Role__c</fullName>
        <inlineHelpText>Select the Role(s) for this Job related Contact</inlineHelpText>
        <label>Job Role</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Bill To</fullName>
                </value>
                <value>
                    <fullName>CC</fullName>
                </value>
                <value>
                    <fullName>Insured</fullName>
                </value>
                <value>
                    <fullName>Tenant</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup field to Opportunity object</description>
        <label>Job</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Job Contacts</relationshipLabel>
        <relationshipName>Job_Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <formula>Contact__r.Phone</formula>
        <label>Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Timberline_Customer_Number__c</fullName>
        <formula>Job_Acct__r.Timberline_Customer_Number__c</formula>
        <inlineHelpText>Timberline Customer Number</inlineHelpText>
        <label>Timberline Customer Number</label>
        <type>Text</type>
    </fields>
    <label>Job Contact</label>
    <nameField>
        <displayFormat>A-{0}</displayFormat>
        <label>Job Contact Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Job Contacts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>